Fix display overflow to be hidden on left side

--- a/styles.css
+++ b/styles.css
@@ -51,6 +51,12 @@ body, html {
     padding-bottom: 5px;
     font-size: 32px;
     font-weight: bold;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: hidden;
+    width: 359px;
+    direction: rtl;
+    text-align: right;
 }
 
 .topDisplay {
